added data model for messages.ejs and filled out dashboard.ejs boxes/table

--- a/public/css/messages.css
+++ b/public/css/messages.css
@@ -170,6 +170,51 @@ a:hover {
   border-radius: 5px;
 }
 
+.line-chart-container {
+  width: 100%;
+  height: 50%;
+  margin-bottom: 20px;
+}
+
+#renewal-info h3,
+#renewal-info p {
+  font-family: Arial, sans-serif;
+  background-color: #f9f9f9;
+  border: 1px solid #ccc;
+  border-radius: 5px;
+  padding: 20px;
+  margin-top: 20px;
+  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
+}
+
+
+.data-model {
+  width: 100%;
+  margin: 20px 0;
+}
+
+.data-model table {
+  width: 100%;
+  border-collapse: collapse;
+  margin-bottom: 20px;
+}
+
+.data-model th, .data-model td {
+  border: 1px solid #ddd;
+  padding: 8px;
+  text-align: left;
+}
+
+.data-model th {
+  background-color: #f2f2f2;
+  color: black;
+}
+
+.data-model td ul {
+  list-style-type: none;
+  padding-left: 0;
+}
+
 .search-input {
   width: 94%;
   padding: 8px;
