--- a/views/partials/navbar.ejs
+++ b/views/partials/navbar.ejs
@@ -124,7 +124,7 @@ a:hover {
     <div class="dropdown-content">
       <a href="/dashboard" class="nav-button">Home</a>
       <a href="/account" class="nav-button">Account</a>
-      <a href="/friends" class="nav-button"></a>
+      <a href="/friends" class="nav-button">Contacts</a>
       <a href="/messages" class="nav-button">
         Messages
         <% if (totalUnreadMessages > 0) { %>
