--- a/views/dashboard.ejs
+++ b/views/dashboard.ejs
@@ -16,17 +16,31 @@
       <h1 class="welcome-message">frogPrince Dashboard</h1>
       <div class="renewal-sections">
         <!-- Ongoing Renewals -->
-        <div id="ongoing-renewals" class="renewal-box"></div>
-
+        <div id="ongoing-renewals" class="renewal-box">
+          <h3>Ongoing Renewals</h3>
+          <table>
+            <tbody id="ongoing-renewals-body"></tbody>
+          </table>
+        </div>
+      
         <!-- Upcoming Renewals -->
-        <div id="upcoming-renewals" class="renewal-box"></div>
-
+        <div id="upcoming-renewals" class="renewal-box">
+          <h3>Upcoming Renewals</h3>
+          <table>
+            <tbody id="upcoming-renewals-body"></tbody>
+          </table>
+        </div>
+      
         <!-- Finished Renewals -->
-        <div id="finished-renewals" class="renewal-box"></div>
-
+        <div id="finished-renewals" class="renewal-box">
+          <h3>Finished Renewals</h3>
+          <table>
+            <tbody id="finished-renewals-body"></tbody>
+          </table>
+        </div>
       </div>
       <section class="activity-section">
-        <h2>Activity</h2>
+        <h2>Recent activity</h2>
         <div class="table-wrapper">
           <table>
             <thead>
